--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   },
   "devDependencies": {
     "angular-mocks": "^1.6.2",
+    "bootstrap": "^3.3.7",
     "jasmine-core": "^2.5.2",
+    "jquery": "^3.1.1",
     "karma": "^1.4.1",
     "karma-jasmine": "^1.1.0",
     "karma-phantomjs-launcher": "^1.0.2"
