--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "angular": "1.6.2"
   },
   "devDependencies": {
+    "ag-grid": "^8.0.1",
     "angular-mocks": "^1.6.2",
+    "angular-route": "^1.6.2",
     "bootstrap": "^3.3.7",
     "jasmine-core": "^2.5.2",
     "jquery": "^3.1.1",
